--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
         <span></span>
       </div>
       <ul class="links-container">
-        <li class="links-item"><a href="#home" class="link active">Home</a></li>
-        <li class="links-item"><a href="#about" class="link">Projects</a></li>
-        <li class="links-item"><a href="#project" class="link">About</a></li>
-        <li class="links-item"><a href="#contact" class="link">Contact</a></li>
+        <li class="links-item"><a href="#home-section" class="link active">Home</a></li>
+        <li class="links-item"><a href="#about-section" class="link">Projects</a></li>
+        <li class="links-item"><a href="#project-section" class="link">About</a></li>
+        <li class="links-item"><a href="#contact-section" class="link">Contact</a></li>
       </ul>
     </nav>
     <!---Home Section-->
