--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,18 @@
         <span></span>
       </div>
       <ul class="links-container">
-        <li class="links-item"><a href="#home-section" class="link active">Home</a></li>
-        <li class="links-item"><a href="#about-section" class="link">Projects</a></li>
-        <li class="links-item"><a href="#project-section" class="link">About</a></li>
-        <li class="links-item"><a href="#contact-section" class="link">Contact</a></li>
+        <li class="links-item">
+          <a href="#home-section" class="link active" title="Go to Home">Home</a>
+        </li>
+        <li class="links-item">
+          <a href="#about-section" class="link" title="Go to Projects">Projects</a>
+        </li>
+        <li class="links-item">
+          <a href="#project-section" class="link" title="Go to About">About</a>
+        </li>
+        <li class="links-item">
+          <a href="#contact-section" class="link" title="Go to Contact">Contact</a>
+        </li>
       </ul>
     </nav>
     <!---Home Section-->
@@ -29,17 +37,23 @@
         </h1>
 
         <p class="profession">Web Developer</p>
-        <p class="info">
-          I'm a person very positive, adaptable,productive, I like new the
+        <p class="info" >
+          Enthusiastic about technology , adaptable, productive. I like the new
           challenges, work team, help the people. Passionate for learn new
-          technologies and grow myself like Profesional and human. I like
-          finances and technology.I love do martial arts and play football. I
-          like help people solving problems with technology. I always see the
-          best in difficult situations.
+          technologies and grow myself like Profesional and human. Interest for
+          finances and technology.I love do martial arts and play soccer . I
+          enjoy solving problems with technology. I always see the best in
+          difficult situations.
         </p>
-        <a href="#contact-section" class="btn">Contact</a>
+        <a href="#contact-section" class="btn" title="Go to Contact section">Contact</a>
       </div>
-      <img src="img/perfilImg.png" class="image" alt="" />
+      <img
+        src="img/myPortafolioImg1.jpeg"
+        class="image"
+        alt="Profile Image"
+        height="400"
+        width="400"
+      />
     </section>
 
     <section class="about" id="about-section">
@@ -48,11 +62,17 @@
       <div class="separator"></div>
       <div class="about-me-container">
         <div class="left-col">
-          <img src="img/myPortafolioImg.jpg" class="about-image" />
+          <img
+            src="img/myPortafolioImg.jpg"
+            class="about-image"
+            alt="About Image"
+            height="501"
+            width="300"
+          />
         </div>
         <div class="right-col">
           <p class="about-para">
-            Software developer with 3+ years of experience developing web
+            Software developer with 5+ years of experience developing web
             applications, spanning from database design and implementation to
             both client and server solutions, having a proficient knowledge in
             programming languages and technologies such as HTML, CSS,
@@ -62,7 +82,13 @@
             teams, participating in different stages of software development
             cycle using best practices and agile methodologies.
           </p>
-          <a href="#" class="btn">Download Resume</a>
+          <a
+            href="pdf/Resume.pdf"
+            target="_blank"
+            class="btn"
+            aria-label="Download Resume"
+            >Download Resume</a
+          >
         </div>
       </div>
       <h2 class="heading">Languages and Tools I know</h2>
