--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="description" content="Luis Andrés Fernández Calderón portafolio">
+    <meta name="keywords" content="Software Engineer,Web Developer,Mid Senior Developer">
+    <meta name="author" content="Luis Andrés Fernández Calderón">
     <title>Personal portafolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
